[package]
name = "libwifi"
description = "A library for parsing IEEE 802.11 frames and handling wifi interfaces."
version = "0.3.1"
keywords = ["wifi", "802_11", "parser", "frame"]
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bench]]
name = "parse_beacon"
harness = false

[[bench]]
name = "parse_data"
harness = false

[dependencies]
log = "0.4"
nom = "7"
thiserror = "1.0"
strum_macros = "0.25"
enum_dispatch = "0.3"
libwifi_macros = { version = "0.0.2", path = "../libwifi_macros" }

[dev-dependencies]
criterion = "0.5"
doc-comment = "0.3"
rand = "0.8"
