[package]
name = "libwifi_macros"
version = "0.0.2"
description = "A library providing macros for the libwifi crate."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
proc-macro2 = "1"
quote = "1"
